# ExoNexus

./: .README.md.swp  .contract_gevp.py.swp  .gitignore  DD_contractions.md  D_l32t64.sh  README.md  a1mp-strange.sh  a1mp.ini.yml  a1mp.sh  a1mp_l32t64.sh  all.sh  b3.4-s32t64-mesonspec.ini.yml  base_exotraction.ini.yml  build_operator_map.py  contract-kaon.sh  contract-pion.sh  contract-test.sh  contract.sh  contract_2pt_matrix.py  contract_2pt_matrix_gpu.py  contract_gevp.py  contract_gevp_irrep.py  contract_gevp_multi_mom.py  contract_test.py  contract_test.sh  convert_eigs.cc  convert_peram96.cc  corr-matrix-mom.sh  displacement.ipynb  dudek_etal_boosted_pipi.txt  eigs.py  example-ini.yml  exotract_input.py  fit_pipi.ipynb  gamma.ipynb  generate_batch.py  generate_batch_master.py  gevp.ipynb  ingest_data.py  inspect-pipi.py  (+22 more)
ExoNexus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
a085m200/: DD-a085m200.sh  a085m200.ini.yml
analysis/: README.md  analyze_spec.py  gevp_nolan.py  gevp_spec.py
ensembles/: machines.yaml
gio-a065m380/: a065m380.ini.yml
gt-data/: read_coeffs.py
ini/: a1mp-l32t64.ini.yml  a1mp-mix.ini.yml  a1mp-strange.ini.yml  a1mp.ini.yml  a1mp_mix_l32t64.ini.yml  a1mp_strange.ini.yml  a1mp_strange_nomix.ini.yml  kaon.ini.yml
notes/: gamma_conventions.aux  gamma_conventions.fdb_latexmk  gamma_conventions.fls
old/: contract_2pt_matrix.py  contract_2pt_matrix_gpu.py  contract_gb.py  contract_opt.py
postprocess/: inspect_avg_corr.py  quick_inspect.py
projection/: README.md
slurm/: README.md  slurm-gevp-matrix.sh  slurm-kaon-cpu.sh  (+5 more)
(+109 files in other folders)
