[tool.poetry]
name = "exotraction"
version = "0.1.0"
description = ""
authors = ["Grant Bradley <g.bradley@fz-juelich.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
gvar = "^13.1.2"
lsqfit = "^13.2.3"
multiprocess = "^0.70.17"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
