[tool.poetry]
name = "exonexus"
version = "0.1.0"
description = "ExoNexus Lattice QCD Analysis Pipeline"
authors = ["Grant g.bradley@fz-juelich.de"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
scipy = "*"
h5py = "*"
matplotlib = "*"
pyyaml = "*"
gvar = "*"
lsqfit = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
